Read poses relative to the seated zero pose for OpenVR

BUG=714013

Review-Url: https://codereview.chromium.org/2829233003
Cr-Commit-Position: refs/heads/master@{#466549}

Former-commit-id: 7939eef0d1684481aaa1bbf96509eac432efdfd1